# graph_coloring

./: .gitignore  CMakeLists.txt  README.md
graphs/: test.col
graphs/dimacs/: index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=S;O=A
graphs/dimacs/clique/: index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D
graphs/dimacs/clique/SOLUTIONS/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D
graphs/dimacs/color/: index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
graphs/dimacs/volume/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D
graphs/dimacs/volume/Clique/: index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
graphs/dimacs/volume/Color/: index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
graphs/dimacs/volume/Machine/: index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
include/: bitmatrix.h  edge_heap.h  graph.h  shrinking_set.h
src/: dimacs.cpp  george_appel.cpp  graph.cpp  shrinking_set_test.cpp
